# rt

./: .dockerignore  .gitattributes  .gitignore  .perlcriticrc  .perltidyrc  .travis.yml  CONTRIBUTING.pod  COPYING  Changelog  Dockerfile  Dockerfile-oracle  HACKING  MANIFEST  META.yml  Makefile  Makefile.PL  Makefile.in  NEWS  README  README.FIRST  README.MariaDB  README.MySQL  README.Oracle  README.PostgreSQL  README.md  README.rtfm  SECURITY.md  TODO  TODO.SMIME  TODO.charts  TODO.jifty.woos  TODO.lorzy  TODO.schema_upgrade_script  TODO.tisql  UPGRADING  UPGRADING.API.40  UPGRADING.mysql  UPGRADING.rtfm  aclocal.m4  app.psgi  (+10 more)
.github/workflows/: github-action.yml  test-all.yml  test-oracle.yml
3.7-EXPERIMENTAL/: aclocal.m4  configure.ac
3.7-EXPERIMENTAL-TUNIS/: README.Oracle
3.7-EXPERIMENTAL-TUNIS/3.7-EXPERIMENTAL/: UPGRADING  config.layout
3.7-EXPERIMENTAL-TUNIS/docs/: creating_external_custom_fields.pod
3.7-EXPERIMENTAL-TUNIS/etc/: rt.spec  schema.Oracle  schema.SQLite
3.7-EXPERIMENTAL-TUNIS/m4/: rt_subst_expanded_arg.m4
3.7-EXPERIMENTAL-TUNIS/sbin/: rt-shredder.in  rt-validator.in
3.7-EXPERIMENTAL-TUNIS/t/: 00-mason-syntax.t  rtname.t
3.7-EXPERIMENTAL/docs/: locking
3.7-EXPERIMENTAL/sbin/: rt-dump-database.in
HOWTO/: README  change.txt  release.txt  version-control.txt
WebRT/admin/: index.html
WebRT/my/: index.html
WebRT/user/: index.html
autom4te.cache/: output.0  requests  traces.0
contrib/: Mailer.pm  README  Tobix-rt11-diff  cookie-prefs.tar.gz.README  folding.el  forms.cgi  manipulate.pm.pth  manipulate.pm.pth.README  mod_auth_mysql.README  ns_authentication.patch  ns_authentication.patch.README  rename_queue.README  reporter.tar.gz.README  req2rt  req2rt.tar.gz.README  signatureforcorrespondence
contrib/No-ModPerl/: ApacheSessionFile.pm  ApacheWrapper.pm  README  rtmux.pl
contrib/ProjMan/: README  schema.mysql
debian/: README.Debian  apache.conf  changelog  control  copyright  cron.d  dirs  etc.aliases  files  postinst  postrm  preinst  prerm  request-tracker-docs  rules  templates  watch
devel/: extract-message-catalog  factory  license_tag  merge-rosetta.pl
devel/docs/: UPGRADING-4.0  UPGRADING-4.2  UPGRADING-4.4  UPGRADING-4.6  UPGRADING-5.0  UPGRADING-6.0  help-system.pod
devel/tools/: apache.conf  change-loc-msgstr  cmd-boilerplate  css_tidy  extract-message-catalog  factory  license_tag  localhost.crt  localhost.key  merge-rosetta.pl  mime.types  rt-apache  rt-attributes-editor  rt-attributes-editor.pl  rt-message-catalog  rt-parse-mail-log  rt-rest2-open-api  rt-static-docs  (+1 more)
doc/: RT_DESCRIPTION  UserView  blurb  usage
docs/: API  FAQ  FAQ.html  GDPR.pod  README.docs  README.oracle  Security  UPGRADING-2.0  UPGRADING-2.x  UPGRADING-3.0  UPGRADING-3.2  UPGRADING-3.4  UPGRADING-3.6  UPGRADING-3.8  UPGRADING-4.0  UPGRADING-4.2  UPGRADING-4.4  UPGRADING-4.6  UPGRADING-5.0  UPGRADING-6.0  UPGRADING.mysql  actions.html  actions.txt  adding_ticketing  admin.html  admin.txt  articles_introduction.pod  assets.pod  attributes.html  attributes.txt  authentication.pod  automating_rt.pod  backups.pod  charts.pod  conditions_and_actions.pod  creating_external_custom_fields.pod  customFields.pod  custom_field.pod  custom_roles.pod  dashboards.pod  (+49 more)
etc/: RTFM_Config.pm  RT_Config.pm  RT_Config.pm.in  RT_SiteConfig.pm  acl.Informix  acl.Oracle  acl.Pg  acl.Pg-8.2  acl.Sybase  acl.mysql  config.pm  config.yml  constraints.mysql  cpanfile  drop.Informix  drop.Oracle  drop_schema.Oracle  drop_schema.Pg  drop_schema.mysql  initialdata  mysql.acl  pg_vendor_config.yml  rt.spec  rtfm_config.pm  schema  schema.Informix  schema.Oracle  schema.Pg  schema.SQLite  schema.Sybase  schema.mysql  schema.mysql-4.0  schema.mysql-4.1  schema.pm  smime.initialdata  sqlite_vendor_config.yml  suidrt.c  upgrade-data-2.1.71  user.Oracle
html/: CalPopup.html  article.html  articles.html  autohandler  dhandler  factoid.html  index.html  l  login.html  logout.html  rt.js  search.html
lib/: MANIFEST  MANIFEST.SKIP  Makefile.PL  RT.pm  RT.pm.in  test.pl
lib/RT/: ACE.pm  (+217 more)
m4/: rt_enable_layout.m4  rt_expand_var.m4  rt_layout.m4
metal-theme/: aclocal.m4  config.layout  releng.cnf
po/: README  es.po  fr.po  it.po  pt_BR.po  rtfm.pot  ru.po  zh_tw.po
sbin/: cpan2rpm  cron_shim  extract-attachments.in  extract-message-catalog  extract_pod_tests  factory  initdb  initdb.in  insert_approval_scrips  insert_approval_scrips.in  insertdata  license_tag  merge-rosetta.pl  migrate-2.0-to-2.1  migrate-db-from-rt3  regression_harness  rt-attributes-viewer  rt-attributes-viewer.in  rt-clean-attributes.in  rt-clean-sessions  rt-clean-sessions.in  rt-clean-shorteners.in  rt-dump-database  rt-dump-database.in  rt-dump-initialdata.in  rt-dump-metadata.in  rt-email-dashboards  rt-email-dashboards.in  rt-email-digest  rt-email-digest.in  rt-email-expiring-auth-tokens.in  rt-email-group-admin  rt-email-group-admin.in  rt-externalize-attachments  rt-externalize-attachments.in  rt-fts-oracle.in  rt-fulltext-indexer  rt-fulltext-indexer.in  rt-importer  rt-importer.in  (+34 more)
spec/: schema.txt  spec.txt
src/: Makefile  locking-counter.c  suidrt.c  suidrtdevel.c
t/: 00-action-Install.t  00-compile.t  00-mason-syntax.t  00smoke.t  01harness.t  02regression.t  04interface.t  05cfsearch.pl  05cfsearch.t  06search_interface.t  10-queue-specific-class.t  2basic_api.t  3upload-customfields.t  99-policy.t  ArticleCollection_Overlay.pm.t  Article_Overlay.pm.t  Class_Overlay.pm.t  System.pm.t  URI__a.pm.t  URI_a.t  URI_fsck_com_rtfm.t  clicky.t  create.t  cron.t  plugin.t  pod.t  rtname.t  savedsearch.t  search.t  stress.t  test_config.yml  testsuite_notes  utils.pl  view-age-field.t
temp_refactoring_tools/: crazy_ppi_way.pl  find_old_sub_names  lower_column_args.pl  lower_method_calls.pl  re  trypatch
tools/: cpan2rpm  extract_pod_tests  factory  factory.mysql  factory.pg  import-1.0-to-2.0  initdb  insertdata  license_tag  shipwright-package  shipwright-update  test  testdeps
webrt/: EditUserComments.html  Login.html  Logout.html  ViewUser.html  autohandler  index.html  webrt.css
(+6172 files in other folders)
